# EPUB-library

./: .gitignore  AGENTS.md  PLANS.md  agent_system.md  architecture.md  document_system.md  implementation_plan.md  open_questions.md  product_spec.md  project_constitution.md  pyproject.toml  reference_examples.md  validation_plan.md
src/medtranslate/: __init__.py
src/medtranslate/cli/: main.py
src/medtranslate/epub_ingest/: __init__.py  extractor.py
tests/: test_epub_ingest.py
