[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medtranslate"
version = "0.1.0"
description = "CLI-first EPUB ingest and Lithuanian medical translation pipeline"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.20",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
medtranslate = "medtranslate.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
